<RelativeLayout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="#fafafa"
    android:orientation="vertical"
    >

   <LinearLayout
        android:id="@+id/linearlayoutfabu"
        android:layout_width="fill_parent"
        android:layout_height="50dp"
        android:paddingLeft="5dp"
        android:background="@drawable/big_button_up"
        android:orientation="horizontal" >

        <RelativeLayout
            android:id="@+id/user_ctrl_ch_cust"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="10dp"
            android:paddingTop="12dp"
            android:paddingBottom="12dp"
            android:layout_weight="1.3" >

            <ImageButton
                android:id="@+id/back1"
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:background="@color/nolor"
                android:src="@drawable/jiantou" />

            <TextView
                android:id="@+id/user_tom_tab2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="1"
                android:textSize="20sp"
                android:visibility="gone" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/user_ctrl_chlayout13"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight="1.0" >

            <TextView
                android:id="@+id/mytitles"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="@string/xinxi"
                android:textSize="20sp" />
        </RelativeLayout>



        <RelativeLayout
            android:id="@+id/user_ctrl_ch_cuout3"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:visibility="invisible"
            android:layout_weight="1.0" >

            <TextView
                android:id="@+id/user_c_tab3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="@string/info"
                android:textSize="20sp" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/user_ctrl_ch_cyout4"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:visibility="invisible"
            android:layout_weight="1.0" >

            <TextView
                android:id="@+id/tom_tab4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="@string/search"
                android:textSize="20sp" />
        </RelativeLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical"
        android:paddingRight="15dp"
        android:layout_below="@+id/linearlayoutfabu"
        android:paddingTop="15dp" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="10dp"
            android:paddingLeft="10dp"
            android:paddingRight="10dp" 
            android:paddingBottom="5dp">

            <TextView
                android:id="@+id/item_cata"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:gravity="center"
                android:text="@string/title"
                android:textColor="@color/black"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/title"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="7"
                android:ems="10"
                android:singleLine="false"
                android:textColor="@color/black" >

                <requestFocus />
            </EditText>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:paddingTop="5dp" 
            android:paddingBottom="5dp">

            <TextView
                android:id="@+id/item_title"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:gravity="center"
                android:text="@string/classs"
                android:textColor="@color/black"
                android:textSize="19sp" />

            <RadioGroup
                android:id="@+id/radioGroup1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="7"
                android:ems="10"
                android:orientation="horizontal" >

                <RadioButton
                    android:id="@+id/radio01"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:checked="true"
                    android:text="@string/miss"
                    android:textColor="@color/black"
                    android:textSize="15sp" />

                <RadioButton
                    android:id="@+id/radio11"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/get"
                    android:textColor="@color/black"
                    android:textSize="15sp" />
            </RadioGroup>
        </LinearLayout>
        
		<LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:paddingTop="5dp" 
            android:paddingBottom="5dp" >

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:gravity="center"
                android:text="@string/biaoqian"
                android:textColor="@color/black"
                android:textSize="20sp" />

            <Spinner
                android:id="@+id/spinner10"
                android:layout_width="0dp"
                style="@android:attr/spinnerDropDownItemStyle"
                android:background="@android:drawable/edit_text"
                android:spinnerMode="dropdown"
                android:dropDownWidth="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="7" />

        </LinearLayout>	
        
        <LinearLayout
            android:id="@+id/LinearLayout1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingBottom="5dp"
            android:paddingTop="5dp" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="10dp"
                android:paddingRight="10dp" >

                <TextView
                    android:id="@+id/item_content"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:gravity="center"
                    android:text="@string/location"
                    android:textColor="@color/black"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/mlocation"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="7"
                    android:ems="10"
                    android:hint="@string/hint1"
                    android:textColor="@color/black" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:paddingTop="10dp" >

                <Button
                    android:id="@+id/button2"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="9"
                    android:text="Button"
                    android:visibility="invisible" />

                <Button
                    android:id="@+id/biaozhub"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:text="@string/biaozhu" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp" >

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:gravity="center_horizontal"
                android:orientation="vertical" >

                <TextView
                    android:id="@+id/textView4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/desc"
                    android:textColor="@color/black"
                    android:textSize="20sp" />
            </LinearLayout>

            <EditText
                android:id="@+id/descri"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="7"
                android:background="@android:drawable/edit_text"
                android:ems="10"
                android:gravity="top"
                android:hint="@string/hint2"
                android:inputType="textMultiLine"
                android:maxLines="6"
                android:minLines="5"
                android:textColor="@color/black" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp" >

            <TextView
                android:id="@+id/textView5"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/phone"
                android:textColor="@color/black"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/pnumber"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:ems="10"
                android:hint="@string/hint3"
                android:inputType="number"
                android:textColor="@color/black" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingLeft="10dp"
            android:paddingRight="10dp" >

            <Button
                android:id="@+id/button4"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="9"
                android:text="Button"
                android:visibility="invisible" />

            <Button
                android:id="@+id/resubmits"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:text="@string/resubmit" />
        </LinearLayout>
    </LinearLayout>

</RelativeLayout>