<RelativeLayout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="#fafafa"
    android:orientation="vertical" >

    <LinearLayout
        android:id="@+id/linearlayoutfabus"
        android:layout_width="fill_parent"
        android:layout_height="50dp"
        android:background="@drawable/big_button_up"
        android:orientation="horizontal"
        android:paddingLeft="5dp" >

        <RelativeLayout
            android:id="@+id/user_ctrl_ch_cust"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="10dp"
            android:layout_weight="1.3"
            android:paddingBottom="12dp"
            android:paddingTop="12dp" >

            <ImageButton
                android:id="@+id/back2"
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:background="@color/nolor"
                android:src="@drawable/jiantou" />

            <TextView
                android:id="@+id/user_tom_tab2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="1"
                android:textSize="20sp"
                android:visibility="gone" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/user_ctrl_chlayout13"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight="1.0" >

            <TextView
                android:id="@+id/mytitles"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="@string/xincha"
                android:textSize="20sp" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/user_ctrl_ch_cuout3"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight="1.0"
            android:visibility="invisible" >

            <TextView
                android:id="@+id/user_c_tab3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="@string/info"
                android:textSize="20sp" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/user_ctrl_ch_cyout4"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight="1.0"
            android:visibility="invisible" >

            <TextView
                android:id="@+id/tom_tab4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="@string/search"
                android:textSize="20sp" />
        </RelativeLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_below="@+id/linearlayoutfabus"
        android:orientation="vertical"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:paddingTop="15dp" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <ImageView
                android:id="@+id/imageView1"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:src="@android:drawable/ic_menu_search" />

            <Spinner
                android:id="@+id/spinner1"
                style="@android:attr/spinnerDropDownItemStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="6"
                android:background="@android:drawable/edit_text"
                android:dropDownWidth="fill_parent"
                android:spinnerMode="dropdown" />

            <Button
                android:id="@+id/searchfor"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:text="@string/search" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <LinearLayout
                android:layout_marginLeft="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >

                <CheckBox
                    android:id="@+id/checkBox100"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="5dp"
                    android:layout_weight="0.7"
                    android:text="@string/anleibie"
                    android:visibility="invisible"
                    android:textColor="@color/black" />
                
                <CheckBox
                    android:id="@+id/checkBox12"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="5dp"
                    android:layout_weight="1"
                    android:text="@string/anleibie"
                    android:textColor="@color/black" />

                <CheckBox
                    android:id="@+id/checkBox13"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="5dp"
                    android:layout_weight="1"
                    android:text="@string/anshijian"
                    android:textColor="@color/black" />

                <CheckBox
                    android:id="@+id/checkBox14"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/andidian"
                    android:textColor="@color/black" />
            </LinearLayout>
        </LinearLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <LinearLayout
                android:id="@+id/tanchu"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical" >

                <LinearLayout
                    android:id="@+id/leibie"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:paddingTop="5dp"
                    android:visibility="gone" >

                    <TextView
                        android:id="@+id/textView1"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_marginRight="15dp"
                        android:gravity="center_vertical"
                        android:text="@string/clas"
                        android:textColor="@color/black"
                        android:textSize="16sp" />

                    <RadioGroup
                        android:id="@+id/radioGroup111"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal" >

                        <RadioButton
                            android:id="@+id/radio001"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginRight="10dp"
                            android:checked="true"
                            android:text="@string/get"
                            android:textColor="@color/black"
                            android:textColorHint="@color/black" />

                        <RadioButton
                            android:id="@+id/radio111"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="right"
                            android:text="@string/miss"
                            android:textColor="@color/black" />
                    </RadioGroup>
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/shijian"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:visibility="gone" >

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_marginRight="17dp"
                        android:gravity="center_vertical"
                        android:text="@string/shijian"
                        android:textColor="@color/black"
                        android:textSize="16sp" />

                    <EditText
                        android:id="@+id/years"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:ems="2"
                        android:inputType="date" />

                    <TextView
                        android:id="@+id/textView2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/year" />

                    <EditText
                        android:id="@+id/months"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:ems="1"
                        android:inputType="date" />

                    <TextView
                        android:id="@+id/textView3"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/month" />

                    <EditText
                        android:id="@+id/days"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:ems="1"
                        android:inputType="date" />

                    <TextView
                        android:id="@+id/textView4"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/day" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/map"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:orientation="vertical"
                    android:visibility="gone" >

                    <TextView
                        android:id="@+id/textView6"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/locat"
                        android:textColor="@color/black"
                        android:textSize="16sp" />

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" >

                        <com.baidu.mapapi.map.MapView
                            android:id="@+id/bmapView2"
                            android:layout_width="fill_parent"
                            android:layout_height="fill_parent"
                            android:clickable="true" >
                        </com.baidu.mapapi.map.MapView>

                        <Button
                            android:id="@+id/mylocation1"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignParentRight="true"
                            android:layout_alignParentTop="true"
                            android:text="@string/locations" />
                    </RelativeLayout>
                </LinearLayout>
            </LinearLayout>

			<RelativeLayout
			    android:layout_width="wrap_content"
			    android:layout_below="@+id/tanchu"
			    android:layout_height="wrap_content" >

				<com.example.Diunar.AutoListView
				    android:id="@+id/autoListView2"
				    android:visibility="gone"
				    android:layout_width="match_parent"
				    android:layout_height="wrap_content" >
				</com.example.Diunar.AutoListView>

				<com.baidu.mapapi.map.MapView
				    android:id="@+id/bmapView3"
				    android:visibility="gone"
				    android:layout_width="fill_parent"
				    android:layout_height="fill_parent"
				    android:clickable="true" >
				</com.baidu.mapapi.map.MapView>

				<Button
				    android:id="@+id/switchs"
				    android:layout_width="wrap_content"
				    android:layout_height="wrap_content"
				    android:visibility="gone"
				    android:layout_alignParentRight="true"
				    android:layout_alignParentBottom="true"
				    android:text="Button" />

			</RelativeLayout>

        </RelativeLayout>

    </LinearLayout>

</RelativeLayout>